--- a/dedication.tex
+++ b/dedication.tex
@@ -36,9 +36,9 @@ To my friends, whose encouragement made this journey worthwhile.
 
 \vspace{0.5cm}
 
-\begin{center}
-\includegraphics[width=0.2\textwidth]{images/qr-code-dedication.png}
-\end{center}
+% \begin{center}
+% \includegraphics[width=0.2\textwidth]{images/qr-code-dedication.png}
+% \end{center}
 
 % \vspace{1cm}
 
