--- a/rapport.tex
+++ b/rapport.tex
@@ -37,6 +37,7 @@
 \usepackage[backend=biber, style=numeric, sorting=none]{biblatex} % Use BibLaTeX
 \addbibresource{references.bib} % Specify the BibTeX file
 \usepackage{shapepar}
+\usepackage{pgfgantt} % For Gantt charts
 
 % \renewcommand*{\bibleftbracket}{<}
 % \renewcommand*{\bibrightbracket}{>}
