--- a/summary_abstract.tex
+++ b/summary_abstract.tex
@@ -12,7 +12,7 @@
 \end{center}
 \vspace{0.5cm}
 
-\noindent \firstparagraph{T}his work is part of our Final Year Project at the Higher Institute of Computer Science and Mathematics of Monastir for 2024-2025. Conducted at \textbf{\textcolor{primary}{'KZ IT Services'}}, we developed \textbf{\textcolor{primary}{'KORPOR'}}, a real estate investment platform with a mobile app and web back-office. Using MySQL, Express-Node.js, React, and Vite, the platform offers fractional property ownership with AI for valuations and recommendations. Blockchain technology secures transactions while SCRUM methodology guided our development process.
+\noindent \firstparagraph{T}his work is part of our Final Year Project at the Higher Institute of Computer Science and Mathematics of Monastir for 2024-2025. Conducted at \textbf{\textcolor{primary}{<<KZ IT Services>>}}, we developed \textbf{\textcolor{primary}{<<KORPOR>>}}, a real estate investment platform with a mobile app and web back-office. Using MySQL, Express-Node.js, React, and Vite, the platform offers fractional property ownership with AI for valuations and recommendations. Blockchain technology secures transactions while SCRUM methodology guided our development process.
 
 % Keywords in a more professional design
 \vspace{0.3cm}
@@ -42,7 +42,7 @@
 \end{center}
 \vspace{0.5cm}
 
-\noindent \firstparagraph{C}e projet s'inscrit dans le cadre de notre projet de fin d'études à l'Institut Supérieur d'Informatique et de Mathématiques de Monastir pour 2024-2025. Réalisé chez \textbf{\textcolor{primary}{"KZ IT Services"}}, nous avons développé \textbf{\textcolor{primary}{"KORPOR"}}, une plateforme d'investissement immobilier avec application mobile et back-office web. Utilisant MySQL, Express-Node.js, React et Vite, la plateforme permet la propriété fractionnée avec IA pour évaluations et recommandations. La blockchain sécurise les transactions tandis que la méthodologie SCRUM a guidé notre processus de développement.
+\noindent \firstparagraph{C}e projet s'inscrit dans le cadre de notre projet de fin d'études à l'Institut Supérieur d'Informatique et de Mathématiques de Monastir pour 2024-2025. Réalisé chez \textbf{\textcolor{primary}{<<KZ IT Services>>}}, nous avons développé \textbf{\textcolor{primary}{<<KORPOR>>}}, une plateforme d'investissement immobilier avec application mobile et back-office web. Utilisant MySQL, Express-Node.js, React et Vite, la plateforme permet la propriété fractionnée avec IA pour évaluations et recommandations. La blockchain sécurise les transactions tandis que la méthodologie SCRUM a guidé notre processus de développement.
 
 % Keywords in a more professional design
 \vspace{0.3cm}
