--- a/chapter4.tex
+++ b/chapter4.tex
@@ -11,7 +11,7 @@ This chapter explores the integration of artificial intelligence capabilities wi
 The AI features presented in this chapter represent a significant competitive advantage for our platform, enabling more accurate property valuations, personalized recommendations, intelligent assistance, and efficient administrative operations. Each model has been carefully designed to solve real-world challenges faced by users interacting with real estate data and transactions.
 
 \section{Sprint 2: Data Collection and Scraping}
-\subsection*{Overview}
+\subsection*{Introduction}
 This section details the data collection processes implemented to gather the real estate market data required for our AI models. 
 
 \subsection{Real Estate Data Scraping}
@@ -70,11 +70,42 @@ Our scraping system uses a distributed architecture with the following component
     \label{fig:scraping-workchart}
 \end{figure}
 
+\subsection{Implementation}
+The data scraping system successfully collected comprehensive property information from multiple real estate platforms. Figure \ref{fig:scraping-output} demonstrates the structured output format of the scraped data, showing how property details are organized and stored for further processing by our AI models.
+\newpage
+\begin{figure}[htbp]
+    \centering
+    % Top row - two images side by side
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{images/mubwab_scraper.jpeg}
+        \caption*{Mubwab Scraper}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{images/properstar_scraper.jpeg}
+        \caption*{Properstar Scraper}
+    \end{minipage}
+    
+    \vspace{1cm}
+    
+    % Bottom row - one centered image
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{images/home_in_tunisia_scraper.jpeg}
+        \caption*{Home in Tunisia Scraper}
+    \end{minipage}
+    \caption{Data Scraping Output Results}
+    \label{fig:scraping-output}
+\end{figure}
+
 \section{Sprint 3: Property Valuation Prediction Model}
-\subsection*{Overview}
+
+\subsection*{Introduction}
 The Property Valuation Prediction Model is designed to estimate both the market value and potential rental income for real estate properties. This provides investors with crucial information to make informed investment decisions.
 
-\subsection{Requirements Analysis}
+\subsection{Analysis}
 \subsubsection{Use Case Diagram}
 The property valuation model serves multiple actors within the Korpor ecosystem. Figure \ref{fig:valuation-use-case} illustrates the primary use cases for the AI-powered property valuation system.
 
@@ -87,23 +118,26 @@ The property valuation model serves multiple actors within the Korpor ecosystem.
 
 \subsubsection{Textual Use Case Descriptions}
 
-\textbf{Use Case: Request Property Valuation}
-\begin{itemize}
-    \item \textbf{Actor}: User (representing Super Admin, Admin, Real Estate Agent)
-    \item \textbf{Precondition}: User is authenticated and has access to valuation features
-    \item \textbf{Main Flow}: 
-    \begin{enumerate}
-        \item User inputs property details (location, size, type, amenities)
-        \item System validates input data
-        \item System processes data through ML model
-        \item System returns market value and rental income predictions
-        \item User reviews and saves valuation results
-    \end{enumerate}
-    \item \textbf{Alternative Flow}: If data is incomplete, system requests additional information
-    \item \textbf{Postcondition}: Valuation is stored and available for future reference
-\end{itemize}
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Use Case} & \textbf{Request Property Valuation} \\
+        \hline
+        \textbf{Actor} & User (representing Super Admin, Admin, Real Estate Agent) \\
+        \hline
+        \textbf{Precondition} & User is authenticated and has access to valuation features \\
+        \hline
+        \textbf{Main Scenario} & User gets market value and rental income predictions for a property \\
+        \hline
+        \textbf{Postcondition} & Valuation is stored and available for future reference \\
+        \hline
+    \end{tabular}
+    \caption{Property Valuation Use Case Description}
+    \label{tab:property-valuation-use-case}
+\end{table}
 
-\subsection{System Design}
+\subsection{Modeling}
 \subsubsection{Class Diagram}
 The property valuation system follows object-oriented design principles. Figure \ref{fig:valuation-class-diagram} shows the main classes and their relationships.
 \newpage
@@ -114,7 +148,18 @@ The property valuation system follows object-oriented design principles. Figure 
     \caption{Property Valuation Model Class Diagram}
     \label{fig:valuation-class-diagram}
 \end{figure}
-\subsection{Model Architecture and Training Process}
+
+\newpage
+The interaction sequence for the AI property valuation prediction model demonstrates the flow between different system components. Figure \ref{fig:ai-prediction-sequence-model} illustrates the sequence of operations from user request to prediction result delivery.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=1\textwidth]{images/sequence_AI_prediction_model.png}
+    \caption{AI Property Valuation Prediction Sequence Diagram}
+    \label{fig:ai-prediction-sequence-model}
+\end{figure}
+
+\subsection{Implementation}
 \subsubsection{Data Features for Valuation}
 The accuracy of the property valuation model heavily relies on the quality and comprehensiveness of the input data. Figure \ref{fig:geo-propriety-data} outlines the key geo-property data features utilized by the model. These features capture essential characteristics of a property and its location, enabling the model to learn complex relationships and predict market values and rental incomes effectively.
 \newpage
@@ -182,17 +227,6 @@ The performance of the trained regression models was rigorously evaluated using 
 \end{figure}
 \newpage
 
-\subsubsection{Prediction Sequence Flow}
-The interaction sequence for the AI property valuation prediction model in Figure \ref{fig:ai-prediction-sequence}.
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=1\textwidth]{images/sequence_AI_prediction_model.png} % Assuming image is in 'images' directory
-    \caption{AI Property Valuation Prediction Sequence Diagram}
-    \label{fig:ai-prediction-sequence}
-\end{figure}
-
-
 \subsubsection{Prediction User Interface}
 Figure \ref{fig:prediction-form} shows the input form, and Figure \ref{fig:prediction-results} displays an example of the prediction results screen.
 
@@ -222,6 +256,7 @@ The Korpor mobile application provides investors with direct access to AI-powere
 \end{figure}
 
 
+\subsection{Test}
 \subsubsection{Mobile Interface Testing (Maestro)}
 To ensure a seamless and reliable user experience on the mobile platform, the interface for displaying AI-driven property evaluations underwent end-to-end testing using Maestro. The tests covered user flows for accessing predictions and interacting with the displayed data. Figure \ref{fig:maestro-tests-mobile} shows the successful completion of these Maestro tests, validating the robustness of the mobile UI components related to the AI features.
 
@@ -232,34 +267,48 @@ To ensure a seamless and reliable user experience on the mobile platform, the in
     \label{fig:maestro-tests-mobile}
 \end{figure}
 
-% \begin{table}[htbp]
-%     \centering
-%     \begin{tabular}{|c|l|l|l|c|}
-%         \hline
-%         \textbf{Test ID} & \textbf{Scenario} & \textbf{Input} & \textbf{Expected Output} & \textbf{Status} \\
-%         \hline
-%         VAL-001 & Valid property data & Complete property details & Accurate valuation & \checkmark \\
-%         \hline
-%         VAL-002 & Incomplete data & Missing property size & Error message & \checkmark \\
-%         \hline
-%         VAL-003 & Edge case location & Remote area property & Reasonable estimate & \checkmark \\
-%         \hline
-%         VAL-004 & High-value property & Luxury property details & Premium valuation & \checkmark \\
-%         \hline
-%         VAL-005 & Model performance & Large dataset & MAE < 10\% & \checkmark \\
-%         \hline
-%     \end{tabular}
-%     \caption{Property Valuation Model Test Scenarios}
-%     \label{tab:valuation-test-scenarios}
-% \end{table}
+\subsubsection{Model Performance Validation}
+The property valuation model underwent comprehensive testing to ensure accuracy and reliability. The model achieved satisfactory performance metrics across different property types and locations, validating its effectiveness for real-world deployment.
+
+\subsection{Retrospective}
+
+The property valuation prediction model sprint provided valuable insights into AI model development and deployment. Table \ref{tab:valuation-retrospective} summarizes the key achievements, challenges, and lessons learned during this sprint.
+\newpage
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Category} & \textbf{Details} \\
+        \hline
+        \textbf{What Went Well} & 
+        \begin{itemize}
+            \item Successfully implemented multiple regression algorithms
+            \item Achieved good model performance metrics
+            \item Feature importance analysis provided valuable insights
+            \item Mobile interface integration worked seamlessly
+            \item Comprehensive testing validated model reliability
+        \end{itemize} \\
+        \hline
+        \textbf{Challenges} & 
+        \begin{itemize}
+            \item Data preprocessing required more time than anticipated
+            \item Model hyperparameter tuning was computationally intensive
+            \item Handling missing or incomplete property data
+            \item Balancing model complexity with interpretability
+        \end{itemize} \\
+        \hline
+    \end{tabular}
+    \caption{Property Valuation Model Sprint Retrospective Summary}
+    \label{tab:valuation-retrospective}
+\end{table}
 
 \newpage
 
 \section{Sprint 4: Real Estate Assistant (NLP Chatbot)}
-\subsection*{Overview}
+\subsection*{Introduction}
 The Real Estate Assistant is an intelligent NLP-powered chatbot designed to provide investors with instant access to real estate legal information and guidance. This AI assistant helps users understand complex legal concepts, property regulations, and investment procedures through natural language conversations.
 
-\subsection{Requirements Analysis}
+\subsection{Analysis}
 \subsubsection{Use Case Diagram}
 The Real Estate Assistant serves primarily investors who need legal guidance during their property investment journey. Figure \ref{fig:assistant-use-case} illustrates the main use cases for the AI assistant.
 \newpage
@@ -272,39 +321,26 @@ The Real Estate Assistant serves primarily investors who need legal guidance dur
 
 \subsubsection{Textual Use Case Descriptions}
 
-\textbf{Use Case: Ask Legal Question}
-\begin{itemize}
-    \item \textbf{Actor}: Investor
-    \item \textbf{Precondition}: User is authenticated and has access to the mobile app
-    \item \textbf{Main Flow}: 
-    \begin{enumerate}
-        \item Investor opens chat interface
-        \item Investor types legal question in natural language
-        \item System processes question using NLP
-        \item System retrieves relevant legal information
-        \item System provides comprehensive answer with references
-        \item System maintains conversation context for follow-up questions
-    \end{enumerate}
-    \item \textbf{Alternative Flow}: If question is unclear, system asks for clarification
-    \item \textbf{Postcondition}: Conversation is saved for future reference
-\end{itemize}
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Use Case} & \textbf{Ask Legal Question} \\
+        \hline
+        \textbf{Actor} & Investor \\
+        \hline
+        \textbf{Precondition} & User is authenticated and has access to the mobile app \\
+        \hline
+        \textbf{Main Scenario} & User get comprehensive answer \\
+        \hline
+        \textbf{Postcondition} & Conversation is saved for future reference \\
+        \hline
+    \end{tabular}
+    \caption{Real Estate Assistant Use Case Description}
+    \label{tab:assistant-use-case}
+\end{table}
 
-\textbf{Use Case: Provide Legal Guidance}
-\begin{itemize}
-    \item \textbf{Actor}: System (AI Assistant)
-    \item \textbf{Precondition}: User has asked a legal question
-    \item \textbf{Main Flow}: 
-    \begin{enumerate}
-        \item System analyzes question intent and entities
-        \item System searches legal knowledge base
-        \item System generates contextual response
-        \item System provides relevant legal references
-        \item System suggests related topics
-    \end{enumerate}
-    \item \textbf{Postcondition}: User receives accurate legal information
-\end{itemize}
-
-\subsection{System Design}
+\subsection{Modeling}
 \subsubsection{Class Diagram}
 The Real Estate Assistant follows a modular architecture for NLP processing and knowledge management. Figure \ref{fig:assistant-class-diagram} shows the main classes and their relationships.
 
@@ -357,7 +393,7 @@ The mobile chat interface provides an intuitive way for investors to interact wi
 \end{figure}
 
 
-\subsection{Testing and Validation}
+\subsection{Test}
 \subsubsection{Test Scenarios}
 The Real Estate Assistant underwent extensive testing to ensure accurate responses and reliable performance. Table \ref{tab:assistant-test-scenarios} presents the key test scenarios.
 
@@ -384,13 +420,44 @@ The Real Estate Assistant underwent extensive testing to ensure accurate respons
     \label{tab:assistant-test-scenarios}
 \end{table}
 
+\subsection{Retrospective}
+
+The Real Estate Assistant sprint demonstrated the successful integration of NLP technology into the platform. Table \ref{tab:assistant-retrospective} summarizes the key outcomes and future improvements.
+
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Category} & \textbf{Details} \\
+        \hline
+        \textbf{What Went Well} & 
+        \begin{itemize}
+            \item Successfully implemented NLP chatbot functionality
+            \item Mobile interface provides intuitive user experience
+            \item Legal knowledge base effectively answers user queries
+            \item Comprehensive testing validated system reliability
+        \end{itemize} \\
+        \hline
+        \textbf{Action Items} & 
+        \begin{itemize}
+            \item Expand legal knowledge base coverage
+            \item Implement multilingual support for broader accessibility
+            \item Add conversation analytics for continuous improvement
+            \item Integrate voice recognition capabilities
+        \end{itemize} \\
+        \hline
+    \end{tabular}
+    \caption{Real Estate Assistant Sprint Retrospective Summary}
+    \label{tab:assistant-retrospective}
+\end{table}
+
 \newpage
 
-\section{Role-Based Backoffice Agent}
-\subsection*{Overview}
+\section{Sprint 5: Role-Based Backoffice Agent}
+\subsection*{Introduction}
 The Role-Based Backoffice Agent is an intelligent AI system designed to assist different user roles (Super Admin, Admin, Real Estate Agent) with automated task management, workflow optimization, and decision support. This AI agent adapts its behavior and recommendations based on the specific role and responsibilities of the authenticated user.
 
-\subsection{Requirements Analysis}
+\subsection{Analysis}
 \subsubsection{Use Case Diagram}
 The Role-Based Backoffice Agent serves multiple user types with role-specific functionalities and automated assistance. Figure \ref{fig:backoffice-use-case} illustrates the main use cases for each role.
 
@@ -403,38 +470,26 @@ The Role-Based Backoffice Agent serves multiple user types with role-specific fu
 
 \subsubsection{Textual Use Case Descriptions}
 
-\textbf{Use Case: Automate Task Management}
-\begin{itemize}
-    \item \textbf{Actor}: User (representing Super Admin, Admin, Real Estate Agent)
-    \item \textbf{Precondition}: User is authenticated with specific role permissions
-    \item \textbf{Main Flow}: 
-    \begin{enumerate}
-        \item User accesses backoffice dashboard
-        \item System identifies user role and permissions
-        \item AI agent analyzes pending tasks and priorities
-        \item System suggests automated actions based on role
-        \item User approves or modifies suggested actions
-        \item System executes approved automated tasks
-    \end{enumerate}
-    \item \textbf{Alternative Flow}: If automation requires approval, system queues for manual review
-    \item \textbf{Postcondition}: Tasks are efficiently managed with minimal manual intervention
-\end{itemize}
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Use Case} & \textbf{agent for administrative tasks} \\
+        \hline
+        \textbf{Actor} & User (representing Super Admin, Admin, Real Estate Agent) \\
+        \hline
+        \textbf{Precondition} & User is authenticated with specific role permissions \\
+        \hline
+        \textbf{Main Scenario} & User get comprehensive answer from platform database \\
+        \hline
+        \textbf{Postcondition} & Tasks are efficiently managed with minimal manual intervention \\
+        \hline
+    \end{tabular}
+    \caption{Role-Based Backoffice Agent Use Case Description}
+    \label{tab:backoffice-use-case}
+\end{table}
 
-\textbf{Use Case: Provide Role-Specific Insights}
-\begin{itemize}
-    \item \textbf{Actor}: AI Agent
-    \item \textbf{Precondition}: User has accessed dashboard with specific role
-    \item \textbf{Main Flow}: 
-    \begin{enumerate}
-        \item System analyzes user role and current context
-        \item AI generates role-specific insights 
-        \item AI suggests optimization opportunities
-        \item System provides actionable recommendations
-    \end{enumerate}
-    \item \textbf{Postcondition}: User receives personalized insights for their role
-\end{itemize}
-
-\subsection{System Design}
+\subsection{Modeling}
 \subsubsection{Class Diagram}
 The Role-Based Backoffice Agent follows a role-based architecture with specialized services for each user type. Figure \ref{fig:backoffice-class-diagram} shows the main classes and their relationships.
 \newpage
@@ -486,7 +541,7 @@ Each role receives a customized dashboard with relevant tools and insights. Figu
 \end{figure}
 
 
-\subsection{Testing and Validation}
+\subsection{Test}
 \subsubsection{Test Scenarios}
 The Role-Based Backoffice Agent underwent comprehensive testing across all user roles. Table \ref{tab:backoffice-test-scenarios} presents the key test scenarios.
 
@@ -512,9 +567,41 @@ The Role-Based Backoffice Agent underwent comprehensive testing across all user 
     \caption{Role-Based Backoffice Agent Test Scenarios}
     \label{tab:backoffice-test-scenarios}
 \end{table}
+
+\subsection{Retrospective}
+
+The Role-Based Backoffice Agent sprint successfully delivered customized administrative support for different user roles. Table \ref{tab:backoffice-retrospective} summarizes the key achievements and future enhancements.
+
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Category} & \textbf{Details} \\
+        \hline
+        \textbf{What Went Well} & 
+        \begin{itemize}
+            \item Successfully implemented role-based AI assistance
+            \item Automated workflow management improved efficiency
+            \item Web interface provides comprehensive administrative tools
+            \item Role permissions and security controls work effectively
+        \end{itemize} \\
+        \hline
+        \textbf{Action Items} & 
+        \begin{itemize}
+            \item Add more sophisticated automation rules
+            \item Implement predictive analytics for task prioritization
+            \item Enhance dashboard customization options
+            \item Integrate with external business intelligence tools
+        \end{itemize} \\
+        \hline
+    \end{tabular}
+    \caption{Role-Based Backoffice Agent Sprint Retrospective Summary}
+    \label{tab:backoffice-retrospective}
+\end{table}
+
 \newpage
-\section{Sprint 5: Investor-Focused Recommendation System}
-\subsection*{Overview}
+\section{Sprint 6: Investor-Focused Recommendation System}
+\subsection*{Introduction}
 The Investor-Focused Recommendation System is an advanced AI model that analyzes investor behavior, preferences, and market conditions to provide personalized property investment recommendations. This system leverages machine learning algorithms to match investors with optimal investment opportunities based on their risk profile, budget, and investment goals.
 
 \begin{figure}[htbp]
@@ -524,7 +611,7 @@ The Investor-Focused Recommendation System is an advanced AI model that analyzes
     \label{fig:collaborative-filtering-overview}
 \end{figure}
 
-\subsection{Requirements Analysis}
+\subsection{Analysis}
 \subsubsection{Use Case Diagram}
 The Recommendation System serves investors by analyzing their profiles and suggesting suitable investment opportunities. Figure \ref{fig:recommendation-use-case} illustrates the main use cases for the recommendation engine.
 
@@ -537,39 +624,26 @@ The Recommendation System serves investors by analyzing their profiles and sugge
 
 \subsubsection{Textual Use Case Descriptions}
 
-\textbf{Use Case: Generate Investment Recommendations}
-\begin{itemize}
-    \item \textbf{Actor}: User (Investor)
-    \item \textbf{Precondition}: Investor has completed profile setup and preferences
-    \item \textbf{Main Flow}: 
-    \begin{enumerate}
-        \item Investor accesses recommendations section
-        \item System analyzes investor profile and preferences
-        \item AI processes available investment opportunities
-        \item System matches properties with investor criteria
-        \item AI ranks recommendations by compatibility score
-        \item System presents personalized investment suggestions
-    \end{enumerate}
-    \item \textbf{Alternative Flow}: If no suitable matches, system suggests expanding criteria
-    \item \textbf{Postcondition}: Investor receives tailored investment recommendations
-\end{itemize}
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Use Case} & \textbf{Generate Investment Recommendations} \\
+        \hline
+        \textbf{Actor} & User (Investor) \\
+        \hline
+        \textbf{Precondition} & Investor has completed profile setup and preferences \\
+        \hline
+        \textbf{Main Scenario} & System matches properties with investor criteria \\
+        \hline
+        \textbf{Postcondition} & Investor receives tailored investment recommendations \\
+        \hline
+    \end{tabular}
+    \caption{Investor-Focused Recommendation System Use Case Description}
+    \label{tab:recommendation-use-case}
+\end{table}
 
-\textbf{Use Case: Update Investment Preferences}
-\begin{itemize}
-    \item \textbf{Actor}: Investor
-    \item \textbf{Precondition}: Investor is authenticated and has existing profile
-    \item \textbf{Main Flow}: 
-    \begin{enumerate}
-        \item Investor accesses preference settings
-        \item User modifies risk tolerance, budget, or location preferences
-        \item System validates and saves updated preferences
-        \item AI recalculates recommendation algorithms
-        \item System generates new recommendations based on updated profile
-    \end{enumerate}
-    \item \textbf{Postcondition}: Recommendations are updated to reflect new preferences
-\end{itemize}
-
-\subsection{System Design}
+\subsection{Modeling}
 \subsubsection{Class Diagram}
 The Recommendation System uses collaborative filtering and content-based algorithms for personalized suggestions. Figure \ref{fig:recommendation-class-diagram} shows the main classes and their relationships.
 
@@ -636,7 +710,7 @@ The system provides transparency in recommendation logic through visual explanat
 Investors receive a personalized dashboard with recommendations and portfolio insights. Figure \ref{fig:recommendation-dashboard} shows the recommendation dashboard design.
 
 
-\subsection{Testing and Validation}
+\subsection{Test}
 \subsubsection{Test Scenarios}
 The Recommendation System underwent extensive testing to ensure accuracy and relevance. Table \ref{tab:recommendation-test-scenarios} presents the key test scenarios.
 
@@ -673,6 +747,37 @@ The mobile recommendation interface underwent thorough testing using Maestro to 
     \caption{Maestro Test Results for Recommendation System}
     \label{fig:maestro-recommendation}
 \end{figure}
+
+\subsection{Retrospective}
+
+The Investor-Focused Recommendation System sprint successfully delivered personalized investment guidance through advanced machine learning algorithms. Table \ref{tab:recommendation-retrospective} summarizes the key achievements and future improvements.
+
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|p{3cm}|p{10cm}|}
+        \hline
+        \textbf{Category} & \textbf{Details} \\
+        \hline
+        \textbf{What Went Well} & 
+        \begin{itemize}
+            \item Successfully implemented collaborative filtering algorithms
+            \item Mobile interface provides excellent user experience
+            \item Recommendation accuracy exceeded expectations
+            \item Comprehensive testing validated system performance
+        \end{itemize} \\
+        \hline
+        \textbf{Action Items} & 
+        \begin{itemize}
+            \item Implement real-time model updates based on user feedback
+            \item Add market trend analysis to recommendations
+            \item Enhance algorithm transparency and explainability
+            \item Integrate social features for investor community building
+        \end{itemize} \\
+        \hline
+    \end{tabular}
+    \caption{Investor-Focused Recommendation System Sprint Retrospective Summary}
+    \label{tab:recommendation-retrospective}
+\end{table}
 
 
 
